testing publications, lint

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -6,7 +6,7 @@
   author={Brundage, Miles and Avin, Shahar and Clark, Jack and Toner, Helen and Eckersley, Peter and Garfinkel, Ben and Dafoe, Allan and Scharre, Paul and Zeitzoff, Thomas and Filar, Bobby and others},
   journal={arXiv preprint arXiv:1802.07228},
   url={https://arxiv.org/abs/1802.07228},
-  year={2018}
+  year={2018},
   preview={malicious_use.png}
 }
 
