--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -5,10 +5,14 @@
   title={The malicious use of artificial intelligence: Forecasting, prevention, and mitigation},
   author={Brundage, Miles and Avin, Shahar and Clark, Jack and Toner, Helen and Eckersley, Peter and Garfinkel, Ben and Dafoe, Allan and Scharre, Paul and Zeitzoff, Thomas and Filar, Bobby and others},
   journal={arXiv preprint arXiv:1802.07228},
-  url={https://arxiv.org/abs/1802.07228},
   year={2018},
+  url={https://arxiv.org/abs/1802.07228},
+  html={https://arxiv.org/abs/1802.07228},
   preview={malicious_use.png}
 }
+
+
+
 
 @article{einstein1905electrodynamics,
   title={On the electrodynamics of moving bodies},
