adding additional pubs

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,23 +8,84 @@
   year={2018},
   url={https://arxiv.org/abs/1802.07228},
   html={https://arxiv.org/abs/1802.07228},
+  bibtex_show={true},
   preview={malicious_use.png}
 }
 
-
-
-
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@article{anderson2018learning,
+  title={Learning to evade static pe machine learning malware models via reinforcement learning},
+  author={Anderson, Hyrum S and Kharkar, Anant and Filar, Bobby and Evans, David and Roth, Phil},
+  journal={arXiv preprint arXiv:1801.08917},
+  year={2018},
+  url={https://arxiv.org/abs/1801.08917},
+  html={https://arxiv.org/abs/1801.08917}
 }
 
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif}
+
+@article{filar2020problemchild,
+  title={ProblemChild: Discovering Anomalous Patterns based on Parent-Child Process Relationships},
+  author={Filar, Bobby and French, David},
+  journal={arXiv preprint arXiv:2008.04676},
+  year={2020},
+  url={https://arxiv.org/abs/2008.04676},
+  html={https://arxiv.org/abs/2008.04676}
+}
+
+@inproceedings{raff2020getting,
+  title={Getting Passive Aggressive About False Positives: Patching Deployed Malware Detectors},
+  author={Raff, Edward and Filar, Bobby and Holt, James},
+  booktitle={2020 International Conference on Data Mining Workshops (ICDMW)},
+  pages={506--515},
+  year={2020},
+  organization={IEEE},
+  url={https://ieeexplore.ieee.org/document/9346444},
+  html={https://ieeexplore.ieee.org/document/9346444}
+}
+
+@article{ayub2023rwarmor,
+  title={RWArmor: a static-informed dynamic analysis approach for early detection of cryptographic windows ransomware},
+  author={Ayub, Md Ahsan and Siraj, Ambareen and Filar, Bobby and Gupta, Maanak},
+  journal={International Journal of Information Security},
+  pages={1--24},
+  year={2023},
+  publisher={Springer},
+  html={https://link.springer.com/article/10.1007/s10207-023-00758-z}
+}
+
+@inproceedings {205827,
+  title = {Ask Me Anything: A Conversational Interface to Augment Information Security Workers},
+  booktitle = {Thirteenth Symposium on Usable Privacy and Security (SOUPS 2017)},
+  year = {2017},
+  address = {Santa Clara, CA},
+  url = {https://www.usenix.org/conference/soups2017/workshop-program/wsiw2017/filar},
+  publisher = {USENIX Association},
+  month = jul
+}
+
+@inproceedings{raff2020automatic,
+  title={Automatic YARA rule generation using biclustering},
+  author={Raff, Edward and Zak, Richard and Lopez Munoz, Gary and Fleming, William and Anderson, Hyrum S and Filar, Bobby and Nicholas, Charles and Holt, James},
+  booktitle={Proceedings of the 13th ACM Workshop on Artificial Intelligence and Security},
+  pages={71--82},
+  year={2020}
+}
+
+@inproceedings{raff2021classifying,
+  title={Classifying sequences of extreme length with constant memory applied to malware detection},
+  author={Raff, Edward and Fleshman, William and Zak, Richard and Anderson, Hyrum S and Filar, Bobby and McLean, Mark},
+  booktitle={Proceedings of the AAAI Conference on Artificial Intelligence},
+  volume={35},
+  number={11},
+  pages={9386--9394},
+  year={2021},
+  url={https://ojs.aaai.org/index.php/AAAI/article/view/17131},
+  html={https://ojs.aaai.org/index.php/AAAI/article/view/17131}
+}
+
+@inproceedings{anderson2016deepdga,
+  title={DeepDGA: Adversarially-tuned domain generation and detection},
+  author={Anderson, Hyrum S and Woodbridge, Jonathan and Filar, Bobby},
+  booktitle={Proceedings of the 2016 ACM workshop on artificial intelligence and security},
+  pages={13--21},
+  year={2016}
 }
