--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -18,7 +18,8 @@
   journal={arXiv preprint arXiv:1801.08917},
   year={2018},
   url={https://arxiv.org/abs/1801.08917},
-  html={https://arxiv.org/abs/1801.08917}
+  html={https://arxiv.org/abs/1801.08917},
+  preview={malwarerl.png}
 }
 
 
@@ -39,7 +40,8 @@
   year={2020},
   organization={IEEE},
   url={https://ieeexplore.ieee.org/document/9346444},
-  html={https://ieeexplore.ieee.org/document/9346444}
+  html={https://ieeexplore.ieee.org/document/9346444},
+  preview={passive_aggressive.png}
 }
 
 @article{ayub2023rwarmor,
@@ -49,7 +51,8 @@
   pages={1--24},
   year={2023},
   publisher={Springer},
-  html={https://link.springer.com/article/10.1007/s10207-023-00758-z}
+  html={https://link.springer.com/article/10.1007/s10207-023-00758-z},
+  preview={rw_armor.png}
 }
 
 @inproceedings {205827,
@@ -59,7 +62,8 @@
   address = {Santa Clara, CA},
   url = {https://www.usenix.org/conference/soups2017/workshop-program/wsiw2017/filar},
   publisher = {USENIX Association},
-  month = jul
+  month = jul,
+  preview={askme.png}
 }
 
 @inproceedings{raff2020automatic,
@@ -67,7 +71,8 @@
   author={Raff, Edward and Zak, Richard and Lopez Munoz, Gary and Fleming, William and Anderson, Hyrum S and Filar, Bobby and Nicholas, Charles and Holt, James},
   booktitle={Proceedings of the 13th ACM Workshop on Artificial Intelligence and Security},
   pages={71--82},
-  year={2020}
+  year={2020},
+  preview={autoyara.png}
 }
 
 @inproceedings{raff2021classifying,
@@ -79,7 +84,8 @@
   pages={9386--9394},
   year={2021},
   url={https://ojs.aaai.org/index.php/AAAI/article/view/17131},
-  html={https://ojs.aaai.org/index.php/AAAI/article/view/17131}
+  html={https://ojs.aaai.org/index.php/AAAI/article/view/17131},
+  preview={extreme_length.png}
 }
 
 @inproceedings{anderson2016deepdga,
@@ -87,5 +93,6 @@
   author={Anderson, Hyrum S and Woodbridge, Jonathan and Filar, Bobby},
   booktitle={Proceedings of the 2016 ACM workshop on artificial intelligence and security},
   pages={13--21},
-  year={2016}
+  year={2016},
+  preview={deepdga.png}
 }
