--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -29,7 +29,8 @@
   journal={arXiv preprint arXiv:2008.04676},
   year={2020},
   url={https://arxiv.org/abs/2008.04676},
-  html={https://arxiv.org/abs/2008.04676}
+  html={https://arxiv.org/abs/2008.04676},
+  preview={problemchild.png}
 }
 
 @inproceedings{raff2020getting,
@@ -52,7 +53,7 @@
   year={2023},
   publisher={Springer},
   html={https://link.springer.com/article/10.1007/s10207-023-00758-z},
-  preview={rw_armor.png}
+  preview={rwarmor.png}
 }
 
 @inproceedings {205827,
