adding selected papers to landing

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -10,6 +10,7 @@
   html={https://arxiv.org/abs/1802.07228},
   bibtex_show={true},
   preview={malicious_use.png}
+  selected={true}
 }
 
 @article{anderson2018learning,
@@ -20,6 +21,7 @@
   url={https://arxiv.org/abs/1801.08917},
   html={https://arxiv.org/abs/1801.08917},
   preview={malwarerl.png}
+  selected={true}
 }
 
 
@@ -65,6 +67,7 @@
   publisher = {USENIX Association},
   month = jul,
   preview={askme.png}
+  selected={true}
 }
 
 @inproceedings{raff2020automatic,
