--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,7 +9,9 @@
   url={https://arxiv.org/abs/1802.07228},
   html={https://arxiv.org/abs/1802.07228},
   bibtex_show={true},
-  preview={malicious_use.png}
+  preview={malicious_use.png},
+  selected={true}
+
 }
 
 @article{anderson2018learning,
@@ -65,7 +67,8 @@
   url = {https://www.usenix.org/conference/soups2017/workshop-program/wsiw2017/filar},
   publisher = {USENIX Association},
   month = jul,
-  preview={askme.png}
+  preview={askme.png},
+  selected={true}
 }
 
 @inproceedings{raff2020automatic,
@@ -96,5 +99,6 @@
   booktitle={Proceedings of the 2016 ACM workshop on artificial intelligence and security},
   pages={13--21},
   year={2016},
-  preview={deepdga.png}
+  preview={deepdga.png},
+  selected={true}
 }
