--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -7,7 +7,7 @@
   journal={arXiv preprint arXiv:1802.07228},
   year={2018},
   url={https://arxiv.org/abs/1802.07228},
-  html={https://arxiv.org/abs/1802.07228},
+  abs={https://arxiv.org/abs/1802.07228},
   bibtex_show={true},
   preview={malicious_use.png},
   selected={true}
@@ -20,8 +20,9 @@
   journal={arXiv preprint arXiv:1801.08917},
   year={2018},
   url={https://arxiv.org/abs/1801.08917},
-  html={https://arxiv.org/abs/1801.08917},
-  preview={malwarerl.png}
+  abs={https://arxiv.org/abs/1801.08917},
+  bibtex_show={true},
+  preview={malwarerl.png},
   selected={true}
 }
 
@@ -32,7 +33,7 @@
   journal={arXiv preprint arXiv:2008.04676},
   year={2020},
   url={https://arxiv.org/abs/2008.04676},
-  html={https://arxiv.org/abs/2008.04676},
+  abs={https://arxiv.org/abs/2008.04676},
   preview={problemchild.png}
 }
 
@@ -44,7 +45,7 @@
   year={2020},
   organization={IEEE},
   url={https://ieeexplore.ieee.org/document/9346444},
-  html={https://ieeexplore.ieee.org/document/9346444},
+  abs={https://ieeexplore.ieee.org/document/9346444},
   preview={passive_aggressive.png}
 }
 
@@ -99,6 +100,5 @@
   booktitle={Proceedings of the 2016 ACM workshop on artificial intelligence and security},
   pages={13--21},
   year={2016},
-  preview={deepdga.png},
-  selected={true}
+  preview={deepdga.png}
 }
