updates based on camlis paper

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -102,3 +102,16 @@
   year={2016},
   preview={deepdga.png}
 }
+
+@misc{bertiger2025evaluatingllmgenerateddetection,
+      title={Evaluating LLM Generated Detection Rules in Cybersecurity},
+      author={Anna Bertiger and Bobby Filar and Aryan Luthra and Stefano Meschiari and Aiden Mitchell and Sam Scholten and Vivek Sharath},
+      booktitle={Preprint of a paper accepted at the Conference on Applied Machine Learning in Information Security (CAMLIS 2025)},
+      year={2025},
+      eprint={2509.16749},
+      archivePrefix={arXiv},
+      primaryClass={cs.CR},
+      url={https://arxiv.org/abs/2509.16749},
+      abs={https://arxiv.org/abs/2509.16749},
+      preview={llm_generated_detection.png}
+}
